--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-sass": "^2.3.2",
     "mongojs": "^2.4.0",
     "morgan": "^1.7.0",
+    "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "socket.io": "^1.4.8"
@@ -36,5 +38,8 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "webpack": "^1.13.1"
+  },
+  "engines": {
+    "node": "4.4.5"
   }
 }
