--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.15.2",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
+    "handlebars": "^4.0.5",
     "mongojs": "^2.4.0",
     "morgan": "^1.7.0",
     "node-bourbon": "^4.2.8",
@@ -32,9 +34,7 @@
     "react-dom": "^15.3.0",
     "socket.io": "^1.4.8"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "engines": {
     "node": "4.4.5"
   }
