--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "axios": "^0.13.1",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "handlebars": "^4.0.5",
@@ -30,6 +32,7 @@
     "morgan": "^1.7.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
+    "passport": "^0.3.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "socket.io": "^1.4.8"
