--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "handlebars": "^4.0.5",
     "mongojs": "^2.4.0",
     "morgan": "^1.7.0",
+    "mysql": "^2.11.1",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "socket.io": "^1.4.8"
